# document-translator-with-llm

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  translate_blogs.py  translate_docs.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
instructions/: blogs_translation_instructions.py  docs_translation_instructions.py
