[project]
name = "doc-translator-with-llm"
version = "0.1.0"
description = "Document translation using llm"
authors = [
    {name = "Jun Ohtani",email = "johtani@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.78.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
